Add right click and rename - not finished yet

--- a/src/TaskTimerWidget/App.xaml
+++ b/src/TaskTimerWidget/App.xaml
@@ -13,6 +13,7 @@
 
             <!-- Value Converters -->
             <helpers:RunningTextColorConverter x:Key="RunningTextColorConverter" />
+            <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
