Add right click and rename - fix edit card location

--- a/src/TaskTimerWidget/Views/MainWindow.xaml
+++ b/src/TaskTimerWidget/Views/MainWindow.xaml
@@ -59,6 +59,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
+                            <!-- Task Card -->
                             <Border
                                 Padding="10"
                                 Margin="0,4"
